Add monopoly example

--- a/docs/MarkovChains.tex
+++ b/docs/MarkovChains.tex
@@ -126,5 +126,9 @@ This can be solved using an iterative derivation. For example, for a fair coin t
 \end{equation}
 Using Markov chains, not only can this be calculated computationally, but you can also calculate the probability of the gambler having a certain number of coins at any time step. See GamblersRuin.py for more details.
 
+\subsection{Monopoly}
+
+The monopoly game can also be simulated using Markov chain analysis. In the Monopoly.py script, a simple setup is created with dice rolls and chance/community chest ``advance to'' cards accounted for. The stationary state gives the optimal position for properties. 
+As has been observed elsewhere, the jail square is the most likely, followed by those around 7 squared afterward.
 
 \end{document}
